--- a/learn/course.css
+++ b/learn/course.css
@@ -7,9 +7,7 @@ a { color: inherit }
 	border-bottom: none;
 	margin-top: .2em;
 }
-h2 {
-	margin-top: 0;
-}
+h2 { margin-top: 0 }
 #html, #output {
 	width: 100%;
 	height: 50vmax;
@@ -30,15 +28,9 @@ h2 {
 	resize: none;
 }
 @media (min-width: 801px) {
-	#text {
-		margin-right: 8px;
-	}
-	#html, #output {
-		width: calc(50% - 4px);
-	}
-	#output {
-		margin-left: 8px;
-	}
+	#text { margin-right: 8px }
+	#html, #output { width: calc(50% - 4px) }
+	#output { margin-left: 8px }
 }
 @media (min-width: 1200px) {
 	.row, #text, #html, #output { height: 100% }
@@ -64,10 +56,8 @@ h2 {
 		width: calc(100% - 12px);
 	}
 }
-@media (min-width: 1501px) {
-	#content {
-		padding-top: 4px;
-	}
+@media (min-width: 1500px) {
+	#content { padding-top: 4px }
 	#text, #html, #output { margin-top: 2px }
 }
 #check {
@@ -82,9 +72,7 @@ h2 {
 	box-shadow: 1px 1px 2px #444;
 	margin-bottom: 12px;
 }
-#check:hover {
-	background: rgba(80, 220, 80, .6);
-}
+#check:hover { background: rgba(80, 220, 80, .6) }
 #check:active {
 	transition: background-color .2s;
 	background: rgba(0, 200, 0, .6);
@@ -106,9 +94,5 @@ h2 {
 	-webkit-transform: none;
 	position: static;
 }
-#passed {
-	background: rgba(100, 220, 100, .6);
-}
-#failed {
-	background: rgba(220, 100, 100, .6);
-}
+#passed { background: rgba(100, 220, 100, .6) }
+#failed { background: rgba(220, 100, 100, .6) }
