--- a/a/main.css
+++ b/a/main.css
@@ -440,10 +440,16 @@ textarea {
 		border-top: 1px solid #fff;
 		border-bottom: 1px solid #fff;
 		background: #000;
+		overflow: hidden;
+		height: 2rem;
+		transition: height 0.2s, border 0.3s;
 	}
 	#nav nav::before {
 		content: '＞';
 		color: #999;
 	}
-	#nav :not(.active):not(:hover) + nav:not(:hover) { display: none }
+	#nav :not(.active):not(:hover) + nav:not(:hover) {
+		height: 0;
+		border: none;
+	}
 }
