--- a/a/main.css
+++ b/a/main.css
@@ -41,7 +41,7 @@ body {
 .nofloat { float: none }
 :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small) > :first-child { margin-top: 0 }
 .mar { margin: 6px }
-.nomar, body, input { margin: 0 }
+.nomar, body, input, .comment > :first-child { margin: 0 }
 .tumar, h1 + *, h2:not(.title) + *, h3:not(.title) + *, form * { margin-top: 2px }
 .sumar:not(:first-child), :not(img) + .desc, .blk { margin-top: 4px }
 .umar:not(:first-child), :not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child), form:not([action="/search/"]), #footer { margin-top: 6px }
@@ -54,10 +54,10 @@ body {
 .spad { padding: 3px }
 .noborder, iframe { border: none }
 .scrl { overflow: auto }
-.scrlx, .comment { overflow-x: auto }
+.scrlx, .comment > * { overflow-x: auto }
 .scrly, #sidebar { overflow-y: auto }
 .br, .desc { border-radius: 4px }
-.hglt, .desc, .comment, section, article, blockquote { background: rgba(255, 255, 255, .4) }
+.hglt, .desc, .comment, section, article { background: rgba(255, 255, 255, .4) }
 .shglt, #content, #sidebar, #footer { background: rgba(255, 255, 255, .8) }
 .white, iframe:not([seamless]) { background: #fff }
 .mono, .ctrls { font-family: monospace }
