--- a/a/main.css
+++ b/a/main.css
@@ -33,14 +33,13 @@ body {
 }
 .blk { display: block }
 [hidden], .target:not(:target) { display: none }
-.ib, #logo, .comment > * { float: left }
-.comment > :not(:first-child):not(:last-child):not(:nth-last-child(2)) { clear: left }
+.inline, .comment > p:nth-child(2):nth-last-child(2) { display: inline }
 .rel, .comment { position: relative }
 .abs, .ctrls { position: absolute }
 .fullwidth { width: 100% }
 .maxwidth, img { max-width: 100% }
 .lft, .row > :not(.rit):not(.sidebar):not(.half):not(.program), .user > * { float: left }
-.rit, .c-sig, .user, .ctrls, h1 small, h2 small { float: right }
+.rit, .user, .ctrls, h1 small, h2 small { float: right }
 .nofloat { float: none }
 :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small) > :first-child { margin-top: 0 }
 .mar { margin: 6px }
@@ -49,15 +48,12 @@ body {
 .sumar:not(:first-child), :not(img) + .desc, .blk { margin-top: 4px }
 .umar:not(:first-child), :not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child), form:not([action="/search/"]), #footer { margin-top: 6px }
 .bumar:not(:first-child), h1:not(:first-child) { margin-top: 8px }
-.lmar, #content, p { margin-bottom: 6px }
-.rmar { margin-right: 6px }
-.bmar, .error, .half { margin-bottom: 6px }
-.lmar { margin-left: 6px }
+.bmar, .error, .half, #content { margin-bottom: 6px }
 .pad, a.center-text.blk, .desc, #content, #sidebar, #footer, .error, .popup { padding: 4px }
 .spad { padding: 3px }
 .noborder, iframe { border: none }
 .scrl { overflow: auto }
-.scrlx, .comment > * { overflow-x: auto }
+.scrlx { overflow-x: auto }
 .scrly, #sidebar { overflow-y: auto }
 .br, .desc { border-radius: 4px }
 .hglt, .desc, .comment, section, article { background: rgba(255, 255, 255, .4) }
@@ -86,7 +82,7 @@ small, a.small, footer, .c-sig, .ctrls a {
 	font-size: .85em;
 	font-weight: normal;
 }
-.comment > pre:first-child, .comment > blockquote:first-child { margin-bottom: 0 }
+.comment > pre, .comment > blockquote, .comment > p { margin-bottom: 0 }
 blockquote {
 	margin-left: 8px;
 	border-left: 2px solid #fa0;
@@ -194,14 +190,12 @@ h1 {
 	padding-bottom: 1px;
 	vertical-align: bottom;
 }
-h2, h1.title, article h1 {
-	font-size: 1.3em;
-}
+.comment h1, hr { border-bottom: none }
+h2, h1.title, article h1 { font-size: 1.3em }
 h3, h2.title, article h2, article article h1 {
 	margin-top: .5em;
 	font-size: 1em;
 }
-hr { border-bottom: none }
 a, .ctrl {
 	color: #000;
 	font-weight: bold;
