--- a/a/main.css
+++ b/a/main.css
@@ -71,6 +71,7 @@ body {
 	line-height: 16px;
 	padding-bottom: 1px;
 }
+.comment img { max-height: 400px }
 .comment:first-child .ctrls { top: 100%; bottom: auto; }
 .ctrls :hover { color: #000 }
 .ctrls :first-child.clkd { text-shadow: 1px 1px 1px #000; color: #e80 }
