--- a/a/main.css
+++ b/a/main.css
@@ -28,13 +28,14 @@ body {
 	-webkit-animation: target 1s;
 }
 .blk { display: block }
+.ib { display: inline-block }
 [hidden], .target:not(:target) { display: none }
 .rel, .comment { position: relative }
 .abs, .ctrls { position: absolute }
 .fullwidth { width: 100% }
 .maxwidth, img { max-width: 100% }
 .lft, .row > :not(.rit):not(.sidebar):not(.half):not(.program), .user > * { float: left }
-.rit, .user, .ctrls, h1 small, h2 small { float: right }
+.rit, .user, .ctrls, h1 small, h2 small, .c-sig { float: right }
 .nofloat { float: none }
 :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small) > :first-child { margin-top: 0 }
 .mar { margin: 6px }
