--- a/a/main.css
+++ b/a/main.css
@@ -31,7 +31,7 @@ body {
 .ib { display: inline-block }
 [hidden], .target:not(:target) { display: none }
 .rel, .comment { position: relative }
-.abs, .ctrls:not(.star-flag) { position: absolute }
+.abs, .ctrls { position: absolute }
 .fullwidth { width: 100% }
 .maxwidth, img { max-width: 100% }
 .lft, .row > :not(.rit):not(.sidebar):not(.half):not(.program), .user > * { float: left }
@@ -64,7 +64,7 @@ code { background: rgba(255, 255, 255, 0.6) }
 .large { font-size: 1.2em }
 .larger, .ctrls { font-size: 1.4em }
 .ctrls {
-	bottom: 100%; right: -1px;
+	bottom: 0; right: 0;
 	z-index: 1;
 	background: #cef;
 	line-height: 16px;
